# ROAR-NET-problem-statements

./: .gitignore  my_sol.json
.reuse/: dep5
problems/HEAL-scheduling/: DataInstanceTransformation.ipynb  HS-Training-2022-A-Easy_instance.json_sol.json  Helper.ipynb  README.md  containerStacking.py  p2.py  test.py  tsp.py
problems/HEAL-scheduling/data/: HS-Training-2022-A-Easy.json  HS-Training-2022-A-Easy_World.json  HS-Training-2022-A-Easy_instance.json  HS-Training-2022-A-Hard.json  HS-Training-2022-A-Hard_World.json  HS-Training-2022-A-Hard_instance.json  HS-Training-2022-A-Medium.json  HS-Training-2022-A-Medium_World.json  HS-Training-2022-A-Medium_instance.json  HS-Training-2022-B-Easy.json  HS-Training-2022-B-Easy_World.json  HS-Training-2022-B-Easy_instance.json  HS-Training-2022-B-Hard.json  HS-Training-2022-B-Hard_World.json  HS-Training-2022-B-Hard_instance.json  HS-Training-2022-B-Medium.json  HS-Training-2022-B-Medium_World.json  (+10 more)
problems/autocarrier-loading/: autocarrier-loading.md
problems/autocarrier-loading/validator/: README.md  pyproject.toml
problems/autocarrier-loading/validator/acl_validator/: cli.py  models.py
problems/hhc-rout-sched/: README.md
problems/hhc-rout-sched/src/toolbox/: README.md  pyproject.toml
problems/hhc-rout-sched/src/toolbox/hhcrsp/: __init__.py
problems/hhc-rout-sched/src/toolbox/hhcrsp/models/: __init__.py  instance_models.py  solution_models.py
problems/hhc-rout-sched/src/toolbox/hhcrsp/scripts/: cli.py
problems/hhc-rout-sched/src/toolbox/hhcrsp/validator/: __init__.py  cli.py
problems/level-scheduling/: README.md
problems/salt-spreading/: README.md
problems/seat-arrangement/: README.md
(+23384 files in other folders)
