# SPDX-FileCopyrightText: 2025 Francesca Da Ros <francesca.daros@uniud.it>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "hhcrsp-toolbox"
version = "1.0"
description = "Toolbox for validating solutions of the Home Healthcare Routing and Scheduling Problem in the formulation of the COST Action school"
authors = ["Francesca Da Ros <francesca.daros@uniud.it>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "hhcrsp" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1.7"
pydantic = "^2.6.1"
tabulate = "^0.9.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
scipy = "^1.12.0"
beaupy = "^3.7.2"
platformdirs = ">=4.2.0"
requests = ">=2.31.0"
igraph = "^0.11.8"

[tool.poetry.scripts]
hhcrsp = "hhcrsp.scripts.cli:main_cli"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.1"
coverage = "^7.4.3"
mypy = "^1.15.0"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
